--- a/after.html
+++ b/after.html
@@ -31,7 +31,7 @@
 			.pic{
 				height: 100%;
 				background-color: red;
-				background-image: url("fcf.jpg");
+				background-image: url("cf.jpg");
 				background-size: cover;
 			}
 			.topcard p{
@@ -91,10 +91,10 @@
 		<div class="topcard">
 			<div>
 			<p style="font-weight: 700; padding-top: 5px; font-size: 23px; padding: 4px;" contenteditable="false">
-				<span id="surname">冯</span><span id="givenname">超凡</span>
+				<span id="surname">陈</span><span id="givenname">斐</span>
 			</p>
 			<p contenteditable="false">
-				学号：20<span>19</span>22<span>60</span><span>90</span><span>02</span>
+				学号：20<span>19</span>22<span>60</span><span>90</span><span>01</span>
 			</p>
 			<p contenteditable="false">
 				班级：物理电子工程学院
