--- a/after.html
+++ b/after.html
@@ -91,10 +91,10 @@
 		<div class="topcard">
 			<div>
 			<p style="font-weight: 700; padding-top: 5px; font-size: 23px; padding: 4px;" contenteditable="false">
-				<span id="surname">宋</span><span id="givenname">健超</span>
+				<span id="surname">陈</span><span id="givenname">斐</span>
 			</p>
 			<p contenteditable="false">
-				学号：20<span>20</span>22<span>60</span><span>90</span><span>08</span>
+				学号：20<span>19</span>22<span>60</span><span>90</span><span>01</span>
 			</p>
 			<p contenteditable="false">
 				班级：物理电子工程学院
